Badge info page fix: issuer description visible

--- a/src/scss/badge.scss
+++ b/src/scss/badge.scss
@@ -240,7 +240,11 @@ button {
                 border: 1px solid #dddddd;
                 border-radius: 4px;
                 margin-left: 15px;
+                margin-bottom: 10px;
 
             }
         }
 
+.issuer-description{
+          margin-bottom: 10px;
+}
